buildscript {
	ext {
		queryDslVersion = "5.0.0"
	}
}

plugins {
	id 'org.springframework.boot' version '2.6.7'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
}

group = 'FIS'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.projectlombok:lombok:1.18.22'
    compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'mysql:mysql-connector-java'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
	testCompileOnly 'junit:junit:4.13'
	testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'

	//swagger
	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'


	// JWT 의존성 추가
	implementation group: 'com.auth0', name: 'java-jwt', version: '3.18.3'

	//이미지 내보내기
	implementation 'commons-io:commons-io:2.11.0'

	// 문자메세지 보내기
	implementation group: 'net.nurigo', name: 'sdk', version: '4.1.3'
	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.3'

	// test 위한 Gson 라이브러리 추가
	implementation 'com.google.code.gson:gson:2.8.7'
	// static method mock 을 위한 의존성 추가
	testImplementation('org.mockito:mockito-inline:3.4.0')

	// AWS S3 사용을 위한 의존성 추가 Spring-Cloud-AWS 추가
	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.3.1'
	// yml customizing 를 하기위해 resolver 만들기 위한 의존성 추갇
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
}

test {
	useJUnitPlatform()
}

def querydslDir = "$buildDir/generated/querydsl"

querydsl {
	jpa = true
	querydslSourcesDir = querydslDir
}
sourceSets {
	main.java.srcDir querydslDir
}

compileQuerydsl{
	options.annotationProcessorPath = configurations.querydsl
}
configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	querydsl.extendsFrom compileClasspath
}